# Hands-On-Learning-in-Computer-Vision

./: README.md
Automobile/: Automated License Plate Recognition (ANPR) using CNN Priyanka.ipynb  Fine-Tune-YOLO-for-Traffic-Flow-Counting.ipynb  fine-tune-yolo-for-Emergency-vehicle-detection.ipynb
Build your AI Agents/: LLMs_Vs_AI_Agents_Live_Demo.ipynb  RAG_with_gemini.ipynb  Research_Multi_Agent_AI.ipynb
Build your AI Agents/Youtube_Analytics_AI_Agent/: .env.example  README.md  gemini_analysis.py  gmail_sender.py  main.py  pyproject.toml  youtube_analysis_20250912_143622.txt  youtube_data.py  youtube_tracking.json
Healthcare/: Breast Cancer Detection CNN Priyanka.ipynb  Heart disease detection.ipynb  PCOS Ovary Detection CV Priyanka.ipynb  Skin Cancer Detection CV Priyanka.ipynb
Manufacturing/: Fine-Tune-YOLO-Production-Line-Counting.ipynb.ipynb  fine-tune-yolo-PPE-detection.ipynb
Model Notebooks/BLIP/: blip.ipynb
SDK Tutorials/: 01_retrieve_projects_datasets.ipynb  02_create_project.ipynb  03_annotation_questions.ipynb  04_upload_preannotations.ipynb  05_magic_wand_confidence_filtering.ipynb  Labellerr_SDK_End_to_End_Annotation_Pipeline.ipynb
Security/: Fine-Tune-YOLO-for-Threat-Detection.ipynb  Intrusion_detection_using_YOLO.ipynb
fine-tune YOLO for various use cases/: Fine-Tune-YOLO-For-Fruits-Counting.ipynb  Fine-Tune-YOLO-for-Cell-Counting.ipynb  Fine-Tune-YOLO-for-Fire-Detection.ipynb  Fine-Tune-YOLO-for-Parking-Space-Monitoring.ipynb  Fine-Tune-YOLO-for-Threat-Detection.ipynb  Fine-Tune_YOLO_for_Product_Recognition_for_Price_Verification.ipynb  (+4 more)
(+35 files in other folders)
